--- a/_output.yml
+++ b/_output.yml
@@ -3,7 +3,7 @@
   config:
     toc:
       before: |
-        <li><p style="text-align:center;"><img src="../assets/images/logo_marianne_fond_blanc.png" style="width:100px;"/></p></li>
+        <li><p style="text-align:center;"><img src="https://mtes-mct.github.io/parcours-r/assets/images/logo_marianne_fond_blanc.png" style="width:100px;"/></p></li>
         <li><a href="./">Préparer ses données avec R et le Tidyverse</a></li>
       after: |
         <li><a href="https://mtes-mct.github.io/parcours-r/">Liste des formations R</a></li>
