--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,6 @@ Type: Book
 Title: Formations à R
 Version: 0.1.0
 URL: https://github.com/MTES-MCT/parcours_r_socle_preparation_des_donnees
-Imports: rmarkdown, htmltools, tidyverse, cartography, sf, GGally, dplyr, plotly, bookdown, RcppRoll, DT, RPostgreSQL, rsdmx, XML, lsr, ggmosaic, visNetwork, FactoMineR, factoextra, ggExtra, kableExtra, hrbrthemes, tmap, highcharter, waffle, gganimate, svglite, cowplot, gifski, docopt, webshot, ggspatial
+Imports: rmarkdown, htmltools, tidyverse, cartography, sf, GGally, dplyr, plotly, bookdown, RcppRoll, DT, RPostgreSQL, rsdmx, XML, lsr, ggmosaic, visNetwork, FactoMineR, factoextra, ggExtra, kableExtra, hrbrthemes, tmap, highcharter, waffle, gganimate, svglite, cowplot, gifski, docopt, webshot, ggspatial, shiny
 License: MIT
 Description: Valise pédagogique pour la formation à R
