--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: "Préparer-ses-données-avec-R-et-le-Tidyverse"
+book_filename: "Preparer-ses-donnees-avec-R-et-le-Tidyverse"
 delete_merged_file: TRUE
 language:
   ui:
