--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -15,12 +15,11 @@ jobs:
     name: Render-Book
     runs-on: macOS-latest
     steps:
+     - uses: actions/checkout@v2
 
-      - name: Checkout repo
-        uses: actions/checkout@master
-
-      - name: Setup R
-        uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-r@master
+        with:
+          r-version: 'release'
 
       - name: Install pandoc
         run: |
