--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install ubuntu dep
         run: |
-          sudo apt-get install libcurl4-openssl-dev libgit2-dev libudunits2-dev
+          sudo apt-get install libcurl4-openssl-dev libgit2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev
           
       - name: Install packages
         run: |
