--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -1,25 +1,22 @@
 on:
   push:
-     branches:
-       - main
-       - master
-  
-env:
-  RENV_PATHS_ROOT: ~/.local/share/renv
+    branches:
+      - main
+      - master
 
-
-name: renderbook
+name: bookdown
 
 jobs:
-  bookdown:
-    name: Render-Book
-    runs-on: ubuntu-latest
+  build:
+    runs-on: macOS-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GH_PAT }}
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@master
-        with:
-          r-version: 'release'
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v1
 
       - name: Setup pandoc
         uses: r-lib/actions/setup-pandoc@master
@@ -38,10 +35,6 @@ jobs:
           key: bookdown-${{ hashFiles('**/*Rmd') }}
           restore-keys: bookdown-
 
-      - name: Install ubuntu dep
-        run: |
-          sudo apt-get install libcurl4-openssl-dev libgit2-dev libudunits2-dev libgdal-dev libgeos-dev libproj-dev
-          
       - name: Install packages
         run: |
           R -e 'install.packages("renv")'
@@ -49,19 +42,19 @@ jobs:
 
       - name: Build site
         run: Rscript -e 'bookdown::render_book("index.Rmd", quiet = TRUE)'
-        
+
       - uses: actions/upload-artifact@v1
         with:
           name: _book
           path: _book/
-  
+
 # Need to first create an empty gh-pages branch
 # see https://pkgdown.r-lib.org/reference/deploy_site_github.html
 # and also add secrets for a GH_PAT and EMAIL to the repository
 # gh-action from Cecilapp/GitHub-Pages-deploy
   checkout-and-deploy:
    runs-on: ubuntu-latest
-   needs: bookdown
+   needs: build
    steps:
      - name: Checkout
        uses: actions/checkout@master
@@ -79,5 +72,4 @@ jobs:
        with: 
           email: ${{ secrets.EMAIL }}               # must be a verified email
           build_dir: _book/                     # "_site/" by default
-    
- 
+          
