CI suite - introduction d'une autre méthode de téléchargement de 'base-cc-tourisme-2019-geo2019.zip' pour contrer CI "SSL peer certificate or SSH remote key was not OK"

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ extdata/**
 menage
 **tourisme-**
 Preparer-ses-donnees-avec-R-et-le-Tidyverse.Rmd
+Preparer-ses-donnees-avec-R-et-le-Tidyverse_files
