Ci suite - probleme autres https de téléchargement solution : ne pas évaluer les chunck

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,4 @@ _bookdown_files
 extdata/**
 menage
 **tourisme-**
-Preparer-ses-donnees-avec-R-et-le-Tidyverse.Rmd
-Preparer-ses-donnees-avec-R-et-le-Tidyverse_files
+Preparer-ses-donnees-avec-R-et-le-Tidyverse*
