--- a/.github/workflows/bookdown-build.yml
+++ b/.github/workflows/bookdown-build.yml
@@ -2,11 +2,13 @@ name: Test compilation de parcours_r_socle_preparation_des_donnees
 
 on:
   pull_request:
-    branches: [main, master, dev]
+    branches: [main, master, dev, dev-ci]
+    
+  workflow_dispatch:
 
 jobs:
   build-bookdown:
     name: Build bookdown
-    uses: MTES-MCT/parcours-r/.github/workflows/bookdown-build.yml@master
+    uses: MTES-MCT/parcours-r/.github/workflows/bookdown-build-from-desc.yml@master
     with:
-      r_version: '4.0.4'
+      r_version: '4.2.1'
