--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ License: LICENCE OUVERTE/ OPEN LICENCE Version 2.0
 URL: https://github.com/MTES-MCT/parcours_r_socle_preparation_des_donnees
 RoxygenNote: 7.2.2
 Imports: 
+    arrow,
     COGiter,
     dbplyr,
     dplyr,
